--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,6 +29,7 @@ body{
   color: #505A5F;
 
 
+
 }
 a{
   color: #333;
@@ -149,7 +150,7 @@ img{
 	}
 
 	& .section{
-		margin: 90px 0;
+		padding: 100px 0;
 		&_title{
 			position: relative;
 			text-align: center;
@@ -306,7 +307,7 @@ img{
 		}
 }
 
-
+//About
 .about{
 	&-page{
 		
@@ -357,10 +358,21 @@ img{
 					dt{
 						width: 10%;
 						padding: 15px 0;
+						@include mq(tab){
+							width: 100%;
+							padding:0;
+						}
 					}
 					dd{
 						width: 90%;
 						padding: 15px 0;
+						@include mq(tab){
+							width: 100%;
+							padding:5px 0 20px 20px;
+							font-size: .9em;
+							line-height: 1.5em;
+						}
+
 					}
 				}
 			}
@@ -400,6 +412,9 @@ img{
 					padding-top: 80%;
 					content: "";
 					display: block;
+					@include mq(tab){
+						padding-top: 100vh;
+					}
 				}
 				&_item{
 					position: absolute;
@@ -409,15 +424,14 @@ img{
 					top:0;
 					transition: .5s all;
 
-		
+					display: flex;
+					flex-wrap: wrap;
+					align-items: center;
+					justify-content: space-between;
 					&.show{
-						display: flex;
 						opacity: 1;
-						flex-wrap: wrap;
-						align-items: center;
-						justify-content: space-between;
 						transition: .5s all;
-				
+						pointer-events: auto;
 					}
 					&_graph{
 						width: 60%;
@@ -438,10 +452,20 @@ img{
 							dt{
 								width: 50%;
 								padding: 15px 0;
+								@include mq(tab){
+									width: 100%;
+									padding:0;
+								}
 							}
 							dd{
 								width: 50%;
 								padding: 15px 0;
+								@include mq(tab){
+									width: 100%;
+									padding:5px 0 20px 20px;
+									font-size: .9em;
+									line-height: 1.5em;
+								}
 							}
 						}
 					}
