--- a/blog/wp-content/themes/blog-template/style.css
+++ b/blog/wp-content/themes/blog-template/style.css
@@ -10,6 +10,9 @@ body {
   font-family: "Murecho", sans-serif;
   color: #505A5F;
 }
+body.noscroll {
+  overflow: hidden;
+}
 
 a {
   color: #333;
@@ -29,19 +32,24 @@ img {
   width: 15%;
   position: fixed;
   right: 0;
+  height: 100%;
+  top: 0;
 }
 @media screen and (max-width: 1025px) {
   .aside {
     width: 100%;
     right: 0px;
     z-index: 10;
-    height: 80px;
+    height: 60px;
   }
   .aside .toggle-sp {
     position: relative;
-    width: 80px;
-    height: 80px;
-    -webkit-overflow-scrolling: touch;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.4);
+  }
+  .aside .toggle-sp:hover {
+    cursor: pointer;
   }
   .aside .toggle-sp :nth-child(1) {
     position: absolute;
@@ -50,6 +58,7 @@ img {
     background-color: black;
     width: 40px;
     height: 1px;
+    transition: 0.5s ease;
   }
   .aside .toggle-sp :nth-child(2) {
     position: absolute;
@@ -58,6 +67,7 @@ img {
     background-color: black;
     width: 40px;
     height: 1px;
+    transition: 0.5s ease;
   }
   .aside .toggle-sp :nth-child(3) {
     position: absolute;
@@ -66,12 +76,28 @@ img {
     background-color: black;
     width: 40px;
     height: 1px;
+    transition: 0.5s ease;
+  }
+  .aside .toggle-sp.show {
+    background: white;
+  }
+  .aside .toggle-sp.show :nth-child(1) {
+    transform: rotate(-45deg) translateY(15px);
+    transition: 0.5s ease;
+  }
+  .aside .toggle-sp.show :nth-child(2) {
+    transition: 0.5s ease;
+    opacity: 0;
+  }
+  .aside .toggle-sp.show :nth-child(3) {
+    transform: rotate(45deg) translateY(-15px);
+    transition: 0.5s ease;
   }
 }
 .aside .header {
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  margin: auto 0;
+  margin-top: 100px;
 }
 @media screen and (max-width: 1025px) {
   .aside .header {
@@ -79,6 +105,7 @@ img {
     pointer-events: none;
     transition: 0.5s ease;
     z-index: 0;
+    margin-top: 0px;
   }
   .aside .header.show {
     opacity: 1;
@@ -90,27 +117,67 @@ img {
   }
 }
 .aside .header_logo {
-  padding-top: 80px;
+  margin-top: 80px;
   text-align: center;
   width: 100%;
 }
-.aside .header_logo img {
-  width: 90px;
-  text-align: center;
-}
-.aside .header_name {
-  text-align: center;
-  margin-bottom: 50px;
-}
 .aside .header_ul {
   text-align: center;
+  padding-top: 10%;
 }
 .aside .header_ul_li {
-  margin: 50px 0px;
+  padding: 30px 0px;
   font-size: 1.5em;
 }
 .aside .header_ul_li :hover {
   color: #111;
+}
+.aside .header_sns {
+  display: flex;
+  margin-top: 100px;
+  justify-content: center;
+}
+.aside .header_sns a {
+  width: 40%;
+  text-align: center;
+}
+@media screen and (max-width: 1025px) {
+  .aside .header_sns a {
+    width: 15%;
+  }
+}
+.aside .header_sns a img {
+  text-align: center;
+  width: 30px;
+}
+
+.modal {
+  position: fixed;
+  top: -60px;
+  width: 100%;
+  height: 60px;
+  background: rgba(17, 17, 17, 0.2);
+  z-index: 40;
+  opacity: 0;
+  transition: 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal.show {
+  transition: 0.5s ease;
+  transform: translateY(60px);
+  opacity: 1;
+}
+.modal_msg {
+  text-align: center;
+  font-size: 1.2em;
+  width: 80%;
+}
+@media screen and (max-width: 1025px) {
+  .modal_msg {
+    font-size: 0.8em;
+  }
 }
 
 .main {
@@ -142,9 +209,11 @@ img {
   width: auto;
   height: 170px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1025px) {
   .main .section_title_en {
-    height: 100px;
+    max-width: 90%;
+    width: auto;
+    height: 80px;
   }
 }
 .main .section_title_jp {
@@ -154,108 +223,81 @@ img {
   margin-left: 50px;
   letter-spacing: 50px;
 }
+@media screen and (max-width: 1025px) {
+  .main .section_title_jp {
+    font-size: 2em;
+    letter-spacing: 25px;
+    margin-left: 25px;
+    margin-top: -50px;
+  }
+}
 .main .section_content_title {
   text-align: center;
   font-size: 2em;
   margin-bottom: 80px;
   margin-top: 80px;
 }
-.main .section_content.posts {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.main .section .skill_graph {
+  width: 100%;
+  font-size: 1.8em;
 }
-.main .section_content.posts .article:nth-child(n) {
-  width: calc(33.3333333333% - 20px);
-  transition: all 0.5s;
-  box-sizing: border-box;
-}
-@media screen and (max-width: 767px) {
-  .main .section_content.posts .article:nth-child(n) {
+@media screen and (max-width: 1025px) {
+  .main .section .skill_graph {
     width: 100%;
   }
 }
-.main .section_content.posts .article img {
+.main .section .recharts-polar-angle-axis-tick-value {
+  font-size: 1.1em;
+}
+@media screen and (max-width: 767px) {
+  .main .section .recharts-polar-angle-axis-tick-value {
+    font-size: 0.5em;
+    margin-left: 200px;
+  }
+}
+.main .section .custom-tooltip {
+  background: rgba(238, 238, 238, 0.8);
+  padding: 20px;
+  line-height: 30px;
+  border-radius: 1px;
+  border: 1px solid rgba(238, 238, 238, 0.8);
+}
+@media screen and (max-width: 1025px) {
+  .main .section .custom-tooltip {
+    line-height: 20px;
+    font-size: 0.8em;
+    padding: 10px;
+  }
+}
+.main .section .skill_desc {
   width: 100%;
-  height: 50%;
-}
-.main .section_content.posts .article_remarks_title {
-  font-size: 1.3em;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  height: 50px;
-}
-.main .section_content.posts .article_remarks_text {
-  font-size: 0.1em;
-}
-.main .section_content.posts .article_remarks_date {
   font-size: 0.8em;
+  margin-top: -100px;
   text-align: right;
 }
-.main .section_content.posts .article:hover {
-  transition: all 0.5s;
-  transform: translateY(-5px);
-  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.2));
-  cursor: pointer;
+@media screen and (max-width: 1025px) {
+  .main .section .skill_desc {
+    width: 100%;
+    font-size: 0.5em;
+  }
 }
-.main .section_content.sns {
-  display: flex;
-}
-.main .section_content.sns .instagram {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 60%;
-  margin-right: 5%;
-}
-.main .section_content.sns .instagram .post {
-  width: 40%;
-  height: 300px;
-}
-.main .section_content.sns .instagram .post img {
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
-}
-.main .section_content.sns .twitter {
-  width: 40%;
-}
-.main .section_btn {
-  border: 1px solid;
-  border-radius: 40px;
-  text-align: center;
-  float: right;
-  transition: 0.5s ease;
-  position: relative;
-  width: 100px;
-  height: 35px;
-}
-.main .section_btn:hover {
-  background: #fff;
-  border-radius: 40px;
-  transition: 0.5s ease;
-}
-.main .section_btn a {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.main .section .skill_desc p {
+  padding-top: 3px;
+  letter-spacing: 1px;
 }
 
 .home .kv {
   height: 100vh;
   position: relative;
   text-align: center;
+  width: 100%;
 }
 .home .kv_text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 .home .kv h2 {
   font-size: 3em;
@@ -267,7 +309,7 @@ img {
   line-height: 60px;
   letter-spacing: 8px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1025px) {
   .home .kv {
     height: calc(100vh - 80px);
     position: relative;
@@ -287,127 +329,238 @@ img {
   .home .kv p {
     width: 100%;
     font-size: 1.2em;
-    line-height: 20px;
+    line-height: 40px;
     letter-spacing: 2px;
   }
 }
+.home .posts {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.home .posts .article:nth-child(n) {
+  width: 48%;
+  height: 600px;
+  transition: all 0.5s;
+  box-sizing: border-box;
+}
+@media screen and (max-width: 767px) {
+  .home .posts .article:nth-child(n) {
+    width: 100%;
+  }
+}
+.home .posts .article img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+.home .posts .article_remarks_title {
+  font-size: 1.5em;
+  margin: 20px 0 10px 5px;
+  min-height: 55px;
+}
+@media screen and (max-width: 1025px) {
+  .home .posts .article_remarks_title {
+    margin-bottom: 0;
+    font-size: 1em;
+  }
+}
+.home .posts .article_remarks_text {
+  font-size: 1em;
+  padding-left: 20px;
+  padding-right: 20px;
+  min-height: 120px;
+}
+@media screen and (max-width: 1025px) {
+  .home .posts .article_remarks_text {
+    font-size: 0.8em;
+  }
+}
+.home .posts .article_remarks_date {
+  font-size: 0.8em;
+  text-align: right;
+}
+.home .posts .article:hover {
+  transition: all 0.5s;
+  transform: translateY(-5px);
+  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.2));
+  cursor: pointer;
+}
+.home .sns {
+  display: flex;
+}
+.home .sns .instagram {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 60%;
+  margin-right: 5%;
+}
+.home .sns .instagram .post {
+  width: 40%;
+  height: 300px;
+}
+.home .sns .instagram .post img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.home .sns .twitter {
+  width: 40%;
+}
+.home .btn {
+  border: 1px solid;
+  border-radius: 40px;
+  text-align: center;
+  float: right;
+  transition: 0.5s ease;
+  position: relative;
+  width: 100px;
+  height: 35px;
+}
+.home .btn:hover {
+  background: #fff;
+  border-radius: 40px;
+  transition: 0.5s ease;
+}
+.home .btn a {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-.about-page .profile {
+.about_content .profile {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 @media screen and (max-width: 767px) {
-  .about-page .profile {
+  .about_content .profile {
     flex-direction: column;
   }
 }
-.about-page .profile_icon {
+.about_content .profile_icon {
   width: 30%;
   text-align: center;
-  margin-bottom: 50px;
 }
-@media screen and (max-width: 767px) {
-  .about-page .profile_icon {
+@media screen and (max-width: 1025px) {
+  .about_content .profile_icon {
     width: 100%;
+    margin-bottom: 50px;
   }
 }
-.about-page .profile_icon_img {
-  width: 200px;
+.about_content .profile_icon_img {
+  width: 120px;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 @media screen and (max-width: 767px) {
-  .about-page .profile_icon_img {
+  .about_content .profile_icon_img {
     width: 150px;
   }
 }
-.about-page .profile_icon p:nth-child(1) {
-  margin-bottom: 10px;
+.about_content .profile_icon_desc {
+  margin: 0 auto;
+  width: 80%;
+  margin-bottom: 20px;
 }
-.about-page .profile_icon p:nth-child(2) {
+.about_content .profile_icon_desc p {
   font-size: 0.8em;
   margin-bottom: 10px;
+  line-height: 20px;
 }
-.about-page .profile_icon p:nth-child(3) {
-  font-size: 0.8em;
+.about_content .profile_icon_desc p:nth-child(1) {
+  font-size: 1.1em;
   margin-bottom: 10px;
 }
-.about-page .profile_biography {
+.about_content .profile_biography {
   width: 70%;
 }
-@media screen and (max-width: 767px) {
-  .about-page .profile_biography {
+@media screen and (max-width: 1025px) {
+  .about_content .profile_biography {
     width: 100%;
   }
 }
-.about-page .profile_biography dl {
+.about_content .profile_biography dl {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
-.about-page .profile_biography dl dt {
+.about_content .profile_biography dl dt {
   width: 10%;
   padding: 15px 0;
 }
 @media screen and (max-width: 1025px) {
-  .about-page .profile_biography dl dt {
+  .about_content .profile_biography dl dt {
     width: 100%;
     padding: 0;
   }
 }
-.about-page .profile_biography dl dd {
+.about_content .profile_biography dl dd {
   width: 90%;
   padding: 15px 0;
 }
 @media screen and (max-width: 1025px) {
-  .about-page .profile_biography dl dd {
+  .about_content .profile_biography dl dd {
     width: 100%;
     padding: 5px 0 20px 20px;
     font-size: 0.9em;
     line-height: 1.5em;
   }
 }
-.about-page .skill_tab {
+.about_content .skill_tab {
   display: flex;
   width: 80%;
   justify-content: space-between;
-  margin: 0 auto;
   font-size: 1.4em;
+  margin: 0 auto 30px auto;
 }
 @media screen and (max-width: 767px) {
-  .about-page .skill_tab {
+  .about_content .skill_tab {
     width: 100%;
+    margin: 0 auto 0 auto;
   }
 }
-.about-page .skill_tab_li {
+.about_content .skill_tab_li {
   cursor: pointer;
   padding: 10px 0;
   transition: 0.5s all;
-  border-radius: 1px;
+  border-radius: 2px;
+  border-width: thin;
   text-align: center;
-  border: 1px solid;
+  border: 1px solid rgba(17, 17, 17, 0.3);
   width: 33.3333333333%;
 }
-.about-page .skill_tab_li:hover {
+.about_content .skill_tab_li:hover {
   background: #fff;
   transition: 0.5s all;
-  transform: translateY(-2px);
+  transform: translateY(-1px);
 }
-.about-page .skill_content {
+@media screen and (max-width: 1025px) {
+  .about_content .skill_tab_li {
+    font-size: 0.7em;
+  }
+}
+.about_content .skill_content {
   position: relative;
 }
-.about-page .skill_content:before {
+.about_content .skill_content:before {
   padding-top: 80%;
   content: "";
   display: block;
 }
 @media screen and (max-width: 1025px) {
-  .about-page .skill_content:before {
+  .about_content .skill_content:before {
     padding-top: 100vh;
   }
 }
-.about-page .skill_content_item {
+.about_content .skill_content_item {
   position: absolute;
   margin: 0 auto;
   pointer-events: none;
@@ -420,53 +573,211 @@ img {
   align-items: center;
   justify-content: center;
 }
-.about-page .skill_content_item.show {
+.about_content .skill_content_item.show {
   opacity: 1;
   transition: 0.5s all;
   pointer-events: auto;
 }
-.about-page .skill_content_item_graph {
-  width: 80%;
-}
-@media screen and (max-width: 1025px) {
-  .about-page .skill_content_item_graph {
-    width: 100%;
-  }
-}
-.about-page .skill_content_item_desc {
-  width: 50%;
-}
-@media screen and (max-width: 1025px) {
-  .about-page .skill_content_item_desc {
-    width: 100%;
-  }
-}
-.about-page .skill_content_item_desc dl {
-  width: 100%;
+
+.blog_content {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
-.about-page .skill_content_item_desc dl dt {
-  width: 50%;
-  padding: 15px 0;
+.blog_content .article:nth-child(n) {
+  width: 48%;
+  height: 600px;
+  transition: all 0.5s;
+  box-sizing: border-box;
 }
-@media screen and (max-width: 1025px) {
-  .about-page .skill_content_item_desc dl dt {
+@media screen and (max-width: 767px) {
+  .blog_content .article:nth-child(n) {
     width: 100%;
-    padding: 0;
   }
 }
-.about-page .skill_content_item_desc dl dd {
-  width: 50%;
-  padding: 15px 0;
+.blog_content .article img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+.blog_content .article_remarks_title {
+  font-size: 1.5em;
+  margin: 20px 0 10px 5px;
+  min-height: 55px;
 }
 @media screen and (max-width: 1025px) {
-  .about-page .skill_content_item_desc dl dd {
-    width: 100%;
-    padding: 5px 0 20px 20px;
-    font-size: 0.9em;
-    line-height: 1.5em;
+  .blog_content .article_remarks_title {
+    margin-bottom: 0;
+    font-size: 1em;
   }
+}
+.blog_content .article_remarks_text {
+  font-size: 1em;
+  padding-left: 20px;
+  padding-right: 20px;
+  min-height: 120px;
+}
+@media screen and (max-width: 1025px) {
+  .blog_content .article_remarks_text {
+    font-size: 0.8em;
+  }
+}
+.blog_content .article_remarks_date {
+  font-size: 0.8em;
+  text-align: right;
+}
+.blog_content .article:hover {
+  transition: all 0.5s;
+  transform: translateY(-5px);
+  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.2));
+  cursor: pointer;
+}
+
+.page_content .article_date {
+  font-size: 0.8em;
+}
+.page_content .article_date_publish {
+  text-align: right;
+  margin-bottom: 5px;
+}
+.page_content .article_date_update {
+  text-align: right;
+}
+.page_content .article_content {
+  font-size: 1.1em;
+  margin-top: 50px;
+  line-height: 30px;
+}
+@media screen and (max-width: 1025px) {
+  .page_content .article_content {
+    font-size: 0.8em;
+    line-height: 23px;
+  }
+}
+.page_content .article_content ol {
+  list-style-type: i;
+  margin: 10px 0 10px 40px;
+}
+.page_content .article_content p .marker {
+  background: linear-gradient(transparent 60%, #ff6 60%);
+}
+.page_content .article_content img {
+  width: 30%;
+  height: auto;
+  text-align: center;
+}
+@media screen and (max-width: 1025px) {
+  .page_content .article_content img {
+    width: 80%;
+  }
+}
+.page_content .article_content .markup-area {
+  background: white;
+  width: 100%;
+  line-height: 0;
+  font-size: 0.8em;
+  margin-bottom: 40px;
+  position: relative;
+  overflow-x: scroll;
+}
+.page_content .article_content .markup-area code {
+  line-height: 20px;
+  display: block;
+  width: 100%;
+  max-height: 300px;
+}
+.page_content .article_content .markup-area-copy {
+  position: absolute;
+  line-height: 0px;
+  top: 20px;
+  right: 10px;
+  background: #eee;
+  border: 1px solid rgba(17, 17, 17, 0.4);
+  border-radius: 10px;
+  padding: 15px 15px;
+  text-align: center;
+  transition: 0.5s ease;
+}
+.page_content .article_content .markup-area-copy.copied {
+  opacity: 0.5;
+}
+.page_content .article_content .markup-area-copy:hover {
+  cursor: pointer;
+  background: #fff;
+  transition: 0.5s ease;
+}
+.page_content .close_published_posts {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.page_content .close_published_posts_prev, .page_content .close_published_posts_next {
+  width: 45%;
+  padding: 20px 5px;
+  height: auto;
+}
+.page_content .close_published_posts_prev .article a, .page_content .close_published_posts_next .article a {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.page_content .close_published_posts_prev .article a .article_image, .page_content .close_published_posts_next .article a .article_image {
+  width: 50%;
+  position: absolute;
+}
+.page_content .close_published_posts_prev .article a .article_image p, .page_content .close_published_posts_next .article a .article_image p {
+  position: relative;
+  top: 10px;
+  left: 10px;
+  background: rgba(17, 17, 17, 0.5);
+  color: white;
+  padding: 5px 10px;
+}
+.page_content .close_published_posts_prev .article a .article_image img, .page_content .close_published_posts_next .article a .article_image img {
+  height: 100%;
+}
+.page_content .close_published_posts_prev .article a .article_remarks, .page_content .close_published_posts_next .article a .article_remarks {
+  width: 50%;
+  padding: 5px 5px;
+  background: rgba(17, 17, 17, 0.5);
+  color: white;
+}
+
+.contact_content .form_control {
+  width: 80%;
+  margin: 0 auto;
+}
+@media screen and (max-width: 1025px) {
+  .contact_content .form_control {
+    width: 100%;
+    font-size: 0.8em;
+  }
+}
+.contact_content .form_control_item {
+  display: flex;
+  margin: 30px auto 30px auto;
+}
+.contact_content .form_control_item label {
+  width: 20%;
+}
+.contact_content .form_control_item_input {
+  width: 80%;
+  height: auto;
+  min-height: 40px;
+  background: white;
+}
+@media screen and (max-width: 1025px) {
+  .contact_content .form_control_item_input {
+    min-height: 30px;
+    font-size: 16px;
+  }
+}
+.contact_content .form_control_item_submit {
+  float: right;
+  margin-top: 50px;
+  border: 1px solid rgba(17, 17, 17, 0.3);
+  border-radius: 3px;
+  padding: 10px 20px 10px 20px;
 }
 
 .footer {
@@ -477,7 +788,7 @@ img {
   line-height: 50px;
   text-align: center;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1025px) {
   .footer {
     width: 100%;
   }
